# rsomics-intervals

./: Cargo.toml
src/: algebra.rs  bed.rs  index.rs  interval.rs  lib.rs  set.rs
tests/: proptest_algebra.rs
