[package]
name = "rsomics-intervals"
version = "0.1.3"
description = "BED algebra + interval index + GFF/GTF interval extraction for the rsomics-* tool family. Layer A primitive."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories = ["science"]
keywords = ["bed", "intervals", "bioinformatics", "genomics", "bedtools"]

[dependencies]
rsomics-common = { path = "../rsomics-common", version = "0.5" }
coitrees = "0.4"
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[features]
default = []
# Parallel intersect / merge across chromosome groups via rayon.
rayon = ["dep:rayon"]

[dependencies.rayon]
workspace = true
optional = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
