[package]
name = "rsomics-intervals"
version = "0.1.5"
description = "BED algebra + interval index + GFF/GTF interval extraction for the rsomics-* tool family. Layer A primitive."
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science"]
keywords = ["bed", "intervals", "bioinformatics", "genomics", "bedtools"]

[dependencies]
rsomics-common = { version = "0.6" }
coitrees = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[features]
default = []
# Parallel intersect / merge across chromosome groups via rayon.
rayon = ["dep:rayon"]

[dependencies.rayon]
version = "1"
optional = true

[dev-dependencies]
tempfile = "3"
proptest = "1"

